--- a/projects/concurrent-programming/Cargo.toml
+++ b/projects/concurrent-programming/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "functional-feature"
+name = "concurrent-programming"
 version = "0.1.0"
 authors = ["zhaoliang <weston_contribute@163.com>"]
 edition = "2018"
 
 [dependencies]
-time = "0.1.12"
-regex = "0.1.41"
